Deactivate security scopes for now
